run typeName string through QString as utf8 not latin1

it contains the localized name, not the latin1 base

BUG: 339710